tests/ui/feature-gates/feature-gate-derive-from.stderr
error[E0658]: use of unstable library feature `derive_from`
  --> $DIR/feature-gate-derive-from.rs:3:10
   |
LL | #[derive(From)]
   |          ^^^^
   |
   = note: see issue #144889 <https://github.com/rust-lang/rust/issues/144889> for more information
   = help: add `#![feature(derive_from)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `derive_from`
  --> $DIR/feature-gate-derive-from.rs:1:5
   |
LL | use std::from::From;
   |     ^^^^^^^^^^^^^^^
   |
   = note: see issue #144889 <https://github.com/rust-lang/rust/issues/144889> for more information
   = help: add `#![feature(derive_from)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
